--- a/ionic.config.json
+++ b/ionic.config.json
@@ -1,4 +1,8 @@
 {
   "name": "test",
-  "app_id": "5711a7e3"
+  "app_id": "5711a7e3",
+  "type": "ionic1",
+  "watchPatterns": [
+    "scss/**/*"
+  ]
 }
