--- a/package.json
+++ b/package.json
@@ -1,46 +1,62 @@
 {
-  "name": "test",
-  "version": "1.1.1",
-  "description": "test: An Ionic project",
-  "dependencies": {
-    "@angular/core": "^4.3.1",
-    "@ionic-native/core": "^4.0.1",
-    "@ionic-native/google-plus": "^4.0.1",
-    "@ionic/cloud": "^0.16.0",
-    "angular": "^1.6.5",
-    "angularfire": "^2.3.0",
-    "bluebird": "^3.5.0",
-    "gulp": "^3.5.6",
-    "gulp-concat": "^2.2.0",
-    "gulp-minify-css": "^0.3.0",
-    "gulp-rename": "^1.2.0",
-    "gulp-sass": "^2.0.4",
-    "ionic-native": "^2.9.0",
-    "zone.js": "^0.8.14"
-  },
-  "devDependencies": {
-    "@ionic/cli-plugin-cordova": "1.6.2",
-    "@ionic/cli-plugin-gulp": "1.1.1",
-    "@ionic/cli-plugin-ionic1": "2.1.1",
-    "bower": "^1.3.3",
-    "gulp-util": "^2.2.14",
-    "ionic": "3.7.0",
-    "shelljs": "^0.3.0"
-  },
-  "cordovaPlugins": [
-    "cordova-plugin-whitelist",
-    "cordova-plugin-statusbar",
-    "cordova-plugin-console",
-    "cordova-plugin-device",
-    "cordova-plugin-splashscreen",
-    "ionic-plugin-keyboard"
-  ],
-  "cordovaPlatforms": [
-    "ios",
-    {
-      "platform": "ios",
-      "version": "",
-      "locator": "ios"
+    "name": "test",
+    "version": "1.1.1",
+    "description": "test: An Ionic project",
+    "dependencies": {
+        "@angular/core": "^4.3.1",
+        "@ionic-native/core": "^4.0.1",
+        "@ionic-native/google-plus": "^4.0.1",
+        "@ionic/cloud": "^0.16.0",
+        "angular": "^1.6.5",
+        "angularfire": "^2.3.0",
+        "bluebird": "^3.5.0",
+        "cordova-android": "^6.2.3",
+        "cordova-plugin-googleplus": "^5.1.1",
+        "gulp": "^3.5.6",
+        "gulp-concat": "^2.2.0",
+        "gulp-minify-css": "^0.3.0",
+        "gulp-rename": "^1.2.0",
+        "gulp-sass": "^2.0.4",
+        "ionic-native": "^2.9.0",
+        "phonegap-plugin-push": "^1.10.5",
+        "zone.js": "^0.8.14"
+    },
+    "devDependencies": {
+        "@ionic/cli-plugin-cordova": "1.6.2",
+        "@ionic/cli-plugin-gulp": "1.1.1",
+        "@ionic/cli-plugin-ionic1": "2.1.1",
+        "bower": "^1.3.3",
+        "gulp-util": "^2.2.14",
+        "ionic": "3.7.0",
+        "shelljs": "^0.3.0"
+    },
+    "cordovaPlugins": [
+        "cordova-plugin-whitelist",
+        "cordova-plugin-statusbar",
+        "cordova-plugin-console",
+        "cordova-plugin-device",
+        "cordova-plugin-splashscreen",
+        "ionic-plugin-keyboard"
+    ],
+    "cordovaPlatforms": [
+        "ios",
+        {
+            "platform": "ios",
+            "version": "",
+            "locator": "ios"
+        }
+    ],
+    "cordova": {
+        "plugins": {
+            "cordova-plugin-googleplus": {
+                "REVERSED_CLIENT_ID": "myreversedclientid"
+            },
+            "phonegap-plugin-push": {
+                "SENDER_ID": "250385009538"
+            }
+        },
+        "platforms": [
+            "android"
+        ]
     }
-  ]
 }
